added output schema to codebase
