# app/src/models/models.py
@@ -1,6 +1,6 @@
 """Module containing data classes for tensor trigger request"""
 
-from typing import Dict, List
+from typing import Dict, Literal
 
 from pydantic import BaseModel, validator
 
@@ -9,19 +9,19 @@ from src.logic.tensor import ALLOWED_TYPES
 
 class SchemaItem(BaseModel):
 
-    var_type: str
+    var_type: Literal['INT', 'FLOAT']
     index: int
 
-    @validator('var_type')
-    def validate_schema_item(cls, v):
-        if v.upper() not in ALLOWED_TYPES:
-            raise ValueError('Invalid variable type ' + v)
-        return v
+
+class ModelSchema(BaseModel):
+
+    input_schema: Dict[str, SchemaItem]
+    output_schema: Dict[str, SchemaItem]
 
 
 class ModelUploadRequest(BaseModel):
 
-    model_schema: Dict[str, SchemaItem]
+    model_schema: ModelSchema
     model_name: str
     model_description: str
     model_content: str
