# app/src/routers/tensor.py
@@ -45,15 +45,16 @@ async def run_model_handler(r: ProcessRequest, uid: str = Depends(get_user())) -
         LOGGER.error('unable to retrieve model %s for user %s', r.model_id, uid)
         return json_response_with_message(status.HTTP_404_NOT_FOUND, 'Cannot find specified model')
 
+    schema = model_meta.model_schema
     # validate provided input vector against
     # the schema registered against the model
-    if not validate_data_point(r.input_vector, model_meta.model_schema):
+    if not validate_data_point(r.input_vector, schema.get('input_schema')):
         LOGGER.error('unable to validate data point %s against schema %s', r.input_vector, model_meta.model_schema)
         return json_response_with_message(status.HTTP_400_BAD_REQUEST, 'Invalid input vector')
 
     # retrieve hd5 file from s3 storage and run tensorflow model
     s3_data = retrieve_s3_file('/tensor-trigger/' + str(r.model_id))
-    results = run_model(s3_data, r.input_vector, model_meta.model_schema)
+    results = run_model(s3_data, r.input_vector, schema.get('input_schema'), schema.get('output_schema'))
     if results is None:
         LOGGER.error('unable to run model %s', r.model_id)
         return json_response_with_message(status.HTTP_500_INTERNAL_SERVER_ERROR, 'Internal server error')
@@ -83,16 +84,17 @@ async def batch_model_handler(r: BatchProcessRequest, uid: str = Depends(get_use
         LOGGER.error('unable to retrieve model %s for user %s', r.model_id, uid)
         return json_response_with_message(status.HTTP_404_NOT_FOUND, 'Cannot find specified model')
 
+    schema = model_meta.model_schema
     # validate provided input vectors against
     # the schema registered against the model
-    invalid_points = any(not validate_data_point(x, model_meta.model_schema) for x in r.input_vectors)
+    invalid_points = any(not validate_data_point(x, schema.get('input_schema')) for x in r.input_vectors)
     if invalid_points:
-        LOGGER.error('unable to validate data point(s) against schema %s', model_meta.model_schema)
+        LOGGER.error('unable to validate data point(s) against schema %s', schema)
         return json_response_with_message(status.HTTP_400_BAD_REQUEST, 'Invalid input vector(s)')
 
     # retrieve hd5 file from s3 storage and run tensorflow model
     s3_data = retrieve_s3_file('/tensor-trigger/' + str(r.model_id))
-    results = run_model_batched(s3_data, r.input_vectors, model_meta.model_schema)
+    results = run_model_batched(s3_data, r.input_vectors, schema.get('input_schema'), schema.get('output_schema'))
     if results is None:
         LOGGER.error('unable to run model %s', r.model_id)
         return json_response_with_message(status.HTTP_500_INTERNAL_SERVER_ERROR, 'Internal server error')
@@ -122,9 +124,10 @@ async def async_batch_model_handler(r: AsyncBatchProcessRequest, uid: str = Depe
         LOGGER.error('unable to retrieve model %s for user %s', r.model_id, uid)
         return json_response_with_message(status.HTTP_404_NOT_FOUND, 'Cannot find specified model')
 
+    schema = model_meta.model_schema
     try:
         meta, bytes_data = parse_base64_file(r.input_data)
-        if not validate_csv_file(bytes_data, model_meta.model_schema):
+        if not validate_csv_file(bytes_data, schema.get('input_schema')):
             LOGGER.error('CSV validation failed')
             raise ValueError
         bytes_data.seek(0)
@@ -167,23 +170,24 @@ async def train_model_handler(r: TrainModelRequest, uid: str = Depends(get_user(
     LOGGER.debug('received request to batch process data async for user %s', uid)
     # get model metadata from postgres server. return
     # 404 error code if model cannot be found
-    model_meta = get_user_model(PG_CREDENTIALS, uid, r.model_id)
-    if model_meta is None:
+    meta = get_user_model(PG_CREDENTIALS, uid, r.model_id)
+    if meta is None:
         LOGGER.error('unable to retrieve model %s for user %s', r.model_id, uid)
         return json_response_with_message(status.HTTP_404_NOT_FOUND, 'Cannot find specified model')
 
+    schema = meta.model_schema
     # validate provided input vectors against
     # the schema registered against the model
-    invalid_input_points = any(not validate_data_point(x, model_meta.model_schema) for x in r.input_vectors)
+    invalid_input_points = any(not validate_data_point(x, schema.get('input_schema')) for x in r.input_vectors)
     if invalid_input_points:
-        LOGGER.error('unable to validate data point(s) against schema %s', model_meta.model_schema)
+        LOGGER.error('unable to validate data point(s) against schema %s', meta.model_schema)
         return json_response_with_message(status.HTTP_400_BAD_REQUEST, 'Invalid input vector(s)')
 
     # validate provided output vectors against
     # the schema registered against the model
-    invalid_output_points =  any(len(x) != model_meta.output_shape for x in r.output_vectors)
+    invalid_output_points = any(not validate_data_point(x, schema.get('output_schema')) for x in r.output_vectors)
     if invalid_output_points:
-        LOGGER.error('unable to validate data point(s) against schema %s', model_meta.model_schema)
+        LOGGER.error('unable to validate data point(s) against schema %s', meta.model_schema)
         return json_response_with_message(status.HTTP_400_BAD_REQUEST, 'Invalid output vector(s)')
 
     # insert job into database and generate new event
