# docs/swagger.yml
@@ -434,19 +434,35 @@ components:
           example: example model used to classify iris flowers
         model_schema:
           type: object
-          example:
-            petal_length:
-              var_type: INT
-              index: 0
-            petal_width:
-              var_type: FLOAT
-              index: 0
-            sepal_length:
-              var_type: INT
-              index: 0
-            sepal_width:
-              var_type: FLOAT
-              index: 0
+          properties:
+            input_schema:
+              type: object
+              example:
+                petal_length:
+                  var_type: INT
+                  index: 0
+                petal_width:
+                  var_type: FLOAT
+                  index: 1
+                sepal_length:
+                  var_type: INT
+                  index: 2
+                sepal_width:
+                  var_type: FLOAT
+                  index: 3
+
+            output_schema:
+              type: object
+              example:
+                iris_setosa:
+                  var_type: INT
+                  index: 0
+                iris_versicolour:
+                  var_type: FLOAT
+                  index: 1
+                iris_virginica:
+                  var_type: INT
+                  index: 2
         created:
           type: string
           format: timestamp
@@ -466,19 +482,35 @@ components:
           example: data:application/octet-stream;base64,RXhhbXBsZSBIRDUgbW9kZWwgZmlsZQ==
         model_schema:
           type: object
-          example:
-            petal_length:
-              var_type: INT
-              index: 0
-            petal_width:
-              var_type: FLOAT
-              index: 0
-            sepal_length:
-              var_type: INT
-              index: 0
-            sepal_width:
-              var_type: FLOAT
-              index: 0
+          properties:
+            input_schema:
+              type: object
+              example:
+                petal_length:
+                  var_type: INT
+                  index: 0
+                petal_width:
+                  var_type: FLOAT
+                  index: 1
+                sepal_length:
+                  var_type: INT
+                  index: 2
+                sepal_width:
+                  var_type: FLOAT
+                  index: 3
+
+            output_schema:
+              type: object
+              example:
+                iris_setosa:
+                  var_type: INT
+                  index: 0
+                iris_versicolour:
+                  var_type: FLOAT
+                  index: 1
+                iris_virginica:
+                  var_type: INT
+                  index: 2
 
     ModelCreatedResponse:
       properties:
@@ -561,10 +593,11 @@ components:
         output_vectors:
           type: array
           items:
-            type: array
-            items:
-              type: number
-            example: [[0, 1, 0]]
+            type: object
+            example:
+              iris_setosa: 1
+              iris_versicolour: 0
+              iris_virginica: 0
 
     TrainModelResponse:
       properties:
@@ -612,10 +645,11 @@ components:
           type: integer
           example: 200
         output:
-          type: array
-          items:
-            type: number
-          example: [0.98, 0.01, 0.01]
+          type: object
+          example:
+            iris_setosa: 1
+            iris_versicolour: 0
+            iris_virginica: 0
 
     BatchedModelRunResponse:
       properties:
@@ -625,10 +659,11 @@ components:
         output:
           type: array
           items:
-            type: array
-            items:
-              type: number
-          example: [[0.05, 0.05, 0.9], [0.98, 0.01, 0.01], [0.3, 0.5, 0.2]]
+            type: object
+            example:
+              iris_setosa: 1
+              iris_versicolour: 0
+              iris_virginica: 0
 
     AsyncModelRunResponse:
       properties:
@@ -703,11 +738,9 @@ components:
             outputs:
               type: array
               items:
-                type: array
-                items:
-                  type: number
-              example: [[0.05, 0.05, 0.9], [0.98, 0.01, 0.01], [0.3, 0.5, 0.2]]
-
-
-
+                type: object
+                example:
+                  iris_setosa: 1
+                  iris_versicolour: 0
+                  iris_virginica: 0
 
